<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>


    <string name="title">My Nanodegree Apps!</string>
    <string name="spStreamer">SPOTIFY STREAMER</string>
    <string name="scores">SCORES APP</string>
    <string name="library">LIBRARY APP</string>
    <string name="buildItBigger">BUILD IT BIGGER</string>
    <string name="xyz">XYZ READER</string>
    <string name="capstone">CAPSTONE: MY OWN APP</string>
</resources>
