<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context=".MainActivity"
                android:background="@color/background">

    <TextView
        android:text="@string/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/txTitle"
        android:textSize="32dp"
        android:textColor="@color/white"
        android:textStyle="bold"/>

    <Button
        style="@style/buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/spStreamer"
        android:id="@+id/btnSpStreamer"
        android:layout_below="@+id/txTitle"
        android:layout_centerHorizontal="true"
        android:onClick="lunchApps"
        />

    <Button
        style="@style/buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scores"
        android:id="@+id/btnScores"
        android:layout_below="@+id/btnSpStreamer"
        android:layout_centerHorizontal="true"
        android:onClick="lunchApps"/>

    <Button
        style="@style/buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/library"
        android:id="@+id/btnLibrary"
        android:layout_below="@+id/btnScores"
        android:layout_alignLeft="@+id/btnXYZ"
        android:layout_alignStart="@+id/btnXYZ"
        android:onClick="lunchApps"/>

    <Button
        style="@style/buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buildItBigger"
        android:id="@+id/btnBuildItBigger"
        android:layout_below="@+id/btnLibrary"
        android:layout_alignLeft="@+id/btnLibrary"
        android:layout_alignStart="@+id/btnLibrary"
        android:onClick="lunchApps"/>

    <Button
        style="@style/buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/xyz"
        android:id="@+id/btnXYZ"
        android:layout_below="@+id/btnBuildItBigger"
        android:layout_centerHorizontal="true"
        android:onClick="lunchApps"/>

    <Button
        style="@style/buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/capstone"
        android:id="@+id/btnCapstone"
        android:layout_below="@+id/btnXYZ"
        android:layout_centerHorizontal="true"
        android:background="@color/black"
        android:textColor="@color/white"
        android:onClick="lunchApps"/>

</RelativeLayout>
